# ai-price-review-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: market_context.json  prices.json  rules.txt  scenarios.json  sector_graph.json
docs/: MAESTRO.md
price_review/: __init__.py  decisions.py  paths.py  prices.py
price_review/agent/: __init__.py  builder.py  llm.py
price_review/api/: app.py  logging_setup.py  schemas.py  trace.py
price_review/config/: __init__.py  settings.py
price_review/evaluation/: __init__.py  models.py  runner.py
price_review/market/: __init__.py  context.py
price_review/memory/: __init__.py  embeddings.py  graph_store.py  qdrant_store.py
price_review/orchestration/: __init__.py  supervisor.py
price_review/scenarios/: __init__.py  loader.py  models.py
price_review/security/: __init__.py  prompt_guard.py
price_review/tools/: __init__.py  registry.py
static/: app.html
static/css/: app.css
static/js/: app.js
tests/: test_app.py  test_decisions.py  test_evaluation.py  test_llm.py  test_market_context.py  test_memory.py  test_orchestration.py  test_prices.py  test_scenarios.py  test_security.py  test_tools.py
