[project]
name = "ai-price-review-agent"
version = "2.0.0"
description = "ReAct agent for end-of-day price review, with memory, multi-agent orchestration, evaluation, and security layers."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["price_review"]
